# jumanpp-unidic

./: CMakeLists.txt  README.md
scripts/: bccwj2mecab_input.py  csj2mecab_input.py  fixup_mecab.py  fixup_mecab2.py  train.sh  unidic.header.csv
src/: CMakeLists.txt  jumanpp-unidic-simple.cc  unidic-2.3.0-simple.spec  unidic-2.3.0.spec  unidic_args.cc  unidic_args.h  unidic_output.cc  unidic_output.h
